# ocsf_mcp

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mcp-server.json  test_mcp_comprehensive.sh
.claude/: README.md  mcp.json  mcp.json.example
.github/workflows/: docker-publish.yml
assets/: README.md
assets/banners/: .gitkeep
assets/social/: .gitkeep
data/ocsf/: 1.0.0.json  1.1.0.json  1.2.0.json  1.3.0.json
data/ocsf-schema/: 1.4.0.json  README.md
src/: lib.rs  main.rs
src/ocsf/: categories.rs  event.rs  mod.rs  schema.rs  validation.rs
src/templates/: javascript.rs  mod.rs  python.rs  rust.rs
src/tools/: code_generator.rs  docs_tool.rs  event_generator.rs  mapper.rs  mod.rs  schema_browser.rs  validator.rs  version_tools.rs
tests/: integration_tests.rs
