[package]
name = "ocsf_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
# MCP SDK
rmcp = { version = "0.8", features = ["transport-io"] }
# Async runtime
tokio = { version = "1.42", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# JSON Schema for MCP tool parameters (must match rmcp's version)
schemars = "1.0"
# Error handling
anyhow = "1.0"
thiserror = "2.0.17"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# HTTP client for fetching OCSF schema
reqwest = { version = "0.12", features = ["json"] }
# Template engine for code generation
handlebars = "6.2"
# Schema validation
jsonschema = "0.33.0"
# String manipulation
regex = "1.11"
Inflector = "0.11"
# UUID generation
uuid = { version = "1.11", features = ["v4"] }
# Time handling
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "ocsf-mcp-server"
path = "src/main.rs"
